[gd_scene load_steps=5 format=3 uid="uid://duwweukywy6eh"]

[ext_resource type="Script" uid="uid://yyy8e7152aa0" path="res://scripts/ui/safeAreaHandler.gd" id="1_qidjw"]
[ext_resource type="FontFile" uid="uid://crwae5t23lklj" path="res://assets/fonts/HomeVideoBold-R90Dv.ttf" id="2_bj2rl"]
[ext_resource type="Script" uid="uid://dk5ir5nt6woka" path="res://scripts/ui/betButtons.gd" id="2_o44lc"]
[ext_resource type="Script" uid="uid://n85ht4fw1ym2" path="res://scripts/ui/betLabels.gd" id="3_oun1i"]

[node name="Betting" type="CanvasLayer"]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 116.0
grow_horizontal = 2
script = ExtResource("1_qidjw")

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("2_bj2rl")
theme_override_font_sizes/font_size = 128
text = "twentyone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0

[node name="BetLabels" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
script = ExtResource("3_oun1i")

[node name="BettingChipsLabel" type="Label" parent="CenterContainer/BetLabels"]
layout_mode = 2
text = "Chips: 100
"
horizontal_alignment = 1

[node name="BettingPotLabel" type="Label" parent="CenterContainer/BetLabels"]
layout_mode = 2
text = "POT: 100"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -456.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
theme_override_constants/margin_left = 256
theme_override_constants/margin_right = 256
theme_override_constants/margin_bottom = 128

[node name="BetButtons" type="FlowContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 28
theme_override_constants/v_separation = 28
alignment = 1
script = ExtResource("2_o44lc")

[node name="Minus" type="VBoxContainer" parent="MarginContainer2/BetButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 28
alignment = 1

[node name="ButtonMinusOne" type="Button" parent="MarginContainer2/BetButtons/Minus"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.545098, 0.658824, 1)
disabled = true
text = "-1"

[node name="ButtonMinusFive" type="Button" parent="MarginContainer2/BetButtons/Minus"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.545098, 0.658824, 1)
disabled = true
text = "-5"

[node name="ButtonMinusTen" type="Button" parent="MarginContainer2/BetButtons/Minus"]
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.545098, 0.658824, 1)
disabled = true
text = "-10"

[node name="Plus" type="VBoxContainer" parent="MarginContainer2/BetButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 28
alignment = 1

[node name="ButtonPlusOne" type="Button" parent="MarginContainer2/BetButtons/Plus"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
disabled = true
text = "+1"

[node name="ButtonPlusFive" type="Button" parent="MarginContainer2/BetButtons/Plus"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
disabled = true
text = "+5"

[node name="ButtonPlusTen" type="Button" parent="MarginContainer2/BetButtons/Plus"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65098, 0.890196, 0.631373, 1)
disabled = true
text = "+10"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/BetButtons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 28
alignment = 1

[node name="ButtonReset" type="Button" parent="MarginContainer2/BetButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.796078, 0.65098, 0.968627, 1)
disabled = true
text = "Reset"

[node name="ButtonPlay" type="Button" parent="MarginContainer2/BetButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.537255, 0.705882, 0.980392, 1)
disabled = true
text = "play"
